# ITMO-EPML-HW

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  dvc.yaml  index.html  mkdocs.yml  params.yaml  pyproject.toml  sitemap.xml
.dvc/: config
.github/workflows/: docs.yml  tests.yml
api/: index.html
api/config/: index.html
api/data/: index.html
api/features/: index.html
api/models/: index.html
api/tracking/: index.html
conf/: pipeline.yaml
conf/clearml/: clearml.conf.example
conf/model/: linear_regression.yaml  random_forest.yaml  ridge.yaml
data/interim/: .gitkeep
data/raw/: .gitkeep
deployment/: index.html
docs/: deployment.md  experiments.md  index.md  pipeline.md  reproducibility.md  usage.md
docs/api/: config.md  data.md  features.md  index.md  models.md  tracking.md
experiments/: index.html
infra/clearml/: .env.example  agent.conf  docker-compose.yml
metrics/: test_metrics.json  train_linear_regression.json  train_metrics.json  train_random_forest.json  train_ridge.json
pipeline/: index.html
reports/: report_hw1.md  report_hw2.md  report_hw3.md  report_hw4.md  report_hw5.md  report_hw6.md
reports/experiments/: .gitignore  report_example.md
reports/experiments/figures/: .gitignore
reproducibility/: index.html
scripts/: clearml_compare.py  clearml_pipeline.py  evaluate.py  generate_report.py  prepare.py  run_experiments.py  select_best.py  train.py
search/: search_index.json
src/housing/: __init__.py
src/housing/config/: __init__.py  validation.py
src/housing/data/: load.py
src/housing/features/: build.py
src/housing/models/: train.py
src/housing/pipeline/: __init__.py  monitoring.py
src/housing/tracking/: __init__.py  clearml.py  context.py  decorators.py  utils.py
template/: cookiecutter.json
tests/: conftest.py  test_clearml_tracking.py  test_config_validation.py  test_features.py  test_load.py  test_models.py  test_pipeline_monitoring.py  test_reproducibility.py  test_tracking.py
usage/: index.html
